Allow user to dynamically generate 'savings piles' through code

--- a/SaVR/Assembly-CSharp.csproj
+++ b/SaVR/Assembly-CSharp.csproj
@@ -45,7 +45,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Category.cs" />
      <Compile Include="Assets\GoldBarData.cs" />
+     <Compile Include="Assets\PlayerAccount.cs" />
      <Compile Include="Assets\Scripts\CombineChildMeshes.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\MoneyPile.cs" />
@@ -83,6 +85,7 @@
      <Compile Include="Assets\SteamVR\Scripts\SteamVR_TrackedObject.cs" />
      <Compile Include="Assets\SteamVR\Scripts\SteamVR_UpdatePoses.cs" />
      <Compile Include="Assets\SteamVR\Scripts\SteamVR_Utils.cs" />
+     <Compile Include="Assets\WorldController.cs" />
      <None Include="Assets\SteamVR\Resources\SteamVR_Fade.shader" />
      <None Include="Assets\SteamVR\Resources\SteamVR_BlitFlip.shader" />
      <None Include="Assets\SteamVR\Resources\SteamVR_ClearAll.shader" />
