Allow changing position of the category piles. Allow movement of the camera

--- a/SaVR/Assembly-CSharp.csproj
+++ b/SaVR/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\CameraManager.cs" />
      <Compile Include="Assets\Category.cs" />
      <Compile Include="Assets\GoldBarData.cs" />
      <Compile Include="Assets\PlayerAccount.cs" />
