--- a/SaVR/Assembly-CSharp.csproj
+++ b/SaVR/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
      <Compile Include="Assets\GoldBarData.cs" />
      <Compile Include="Assets\Scripts\CameraManager.cs" />
      <Compile Include="Assets\Scripts\Category.cs" />
+     <Compile Include="Assets\Scripts\SavingsPile.cs" />
      <Compile Include="Assets\Scripts\SteamVR_FirstPersonController.cs" />
      <Compile Include="Assets\Scripts\WandController.cs" />
      <Compile Include="Assets\Scripts\WorldController.cs" />
